--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -107,3 +107,45 @@ button,
     }
   }
 }
+
+.card {
+  background: $white;
+  width: 10rem;
+  height: 10rem;
+  border-radius: 5px;
+  box-shadow: $heavy-shadow;
+  overflow: hidden;
+  text-align: center;
+
+  h2 {
+    font-size: 0.9rem;
+    margin: 0;
+    margin-top: 0.5rem;
+  }
+
+  p {
+    font-size: 0.5rem;
+  }
+
+  .card-img {
+    background: url("../images/keyboard-bg.png");
+    height: 50%;
+    width: 100%;
+    background-size: cover;
+  }
+
+  @include breakpoint-up(large) {
+    width: 20rem;
+    height: 20rem;
+
+    h2 {
+      font-size: 1.5rem;
+      margin-top: 1rem;
+    }
+
+    p {
+      font-size: 0.9rem;
+      padding: 0 1rem;
+    }
+  }
+}
