--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -189,6 +189,49 @@ button,
   }
 }
 
+.card {
+  background: #fff;
+  width: 10rem;
+  height: 10rem;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.31);
+          box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.31);
+  overflow: hidden;
+  text-align: center;
+}
+
+.card h2 {
+  font-size: 0.9rem;
+  margin: 0;
+  margin-top: 0.5rem;
+}
+
+.card p {
+  font-size: 0.5rem;
+}
+
+.card .card-img {
+  background: url("../images/keyboard-bg.png");
+  height: 50%;
+  width: 100%;
+  background-size: cover;
+}
+
+@media (min-width: 64em) {
+  .card {
+    width: 20rem;
+    height: 20rem;
+  }
+  .card h2 {
+    font-size: 1.5rem;
+    margin-top: 1rem;
+  }
+  .card p {
+    font-size: 0.9rem;
+    padding: 0 1rem;
+  }
+}
+
 .header__menu {
   margin-top: 1rem;
   background: #fff;
@@ -687,6 +730,91 @@ button,
 @media (min-width: 64em) {
   .skills__content h1 {
     font-size: 3rem;
+  }
+}
+
+.projects {
+  font-family: "Poppins", sans-serif;
+}
+
+.projects__content {
+  width: 90%;
+  margin: auto;
+  padding: 1rem;
+}
+
+.projects__content h1 {
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 0;
+  margin-bottom: 0.25rem;
+}
+
+.projects__content .line {
+  width: 100%;
+  height: 3px;
+  background: #ff8800;
+}
+
+.projects__wd {
+  width: 100%;
+}
+
+.projects__wd h2 {
+  text-align: center;
+}
+
+.projects__wd h2 span {
+  color: #ff8800;
+}
+
+.projects__wd .grid-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+  gap: 1rem 1rem;
+      grid-template-areas: "project-1 project-2 project-3";
+}
+
+@media (min-width: 64em) {
+  .projects__wd .grid-container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 1rem 3rem;
+  }
+}
+
+.projects__wd .project-1 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: project-1;
+}
+
+.projects__wd .project-2 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: project-2;
+}
+
+.projects__wd .project-3 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: project-3;
+}
+
+@media (min-width: 64em) {
+  .projects__content h1 {
+    font-size: 3rem;
+  }
+  .projects .section-title {
+    font-size: 2rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
