--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -134,18 +134,18 @@ button,
     background-size: cover;
   }
 
-  @include breakpoint-up(large) {
-    width: 20rem;
-    height: 20rem;
+  // @include breakpoint-up(large) {
+  //   width: 20rem;
+  //   height: 20rem;
 
-    h2 {
-      font-size: 1.5rem;
-      margin-top: 1rem;
-    }
+  //   h2 {
+  //     font-size: 1.5rem;
+  //     margin-top: 1rem;
+  //   }
 
-    p {
-      font-size: 0.9rem;
-      padding: 0 1rem;
-    }
-  }
+  //   p {
+  //     font-size: 0.9rem;
+  //     padding: 0 1rem;
+  //   }
+  // }
 }
