--- a/app/scss/_projects.scss
+++ b/app/scss/_projects.scss
@@ -21,7 +21,7 @@
 
   &__wd {
     width: 100%;
-    justify-content: center;
+
     h2 {
       text-align: center;
       span {
@@ -32,6 +32,7 @@
     .grid-container {
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
       grid-template-columns: 1fr 1fr 1fr;
       grid-template-rows: 1fr;
       gap: 1rem 1rem;
@@ -54,6 +55,11 @@
     .project-3 {
       grid-area: project-3;
     }
+  }
+
+  .section-title {
+    margin: 0;
+    margin-bottom: 1rem;
   }
 
   //Desktop
