--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -6,6 +6,7 @@ $transparent-orange: #ff880086;
 $white: #fff;
 $heavy-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.31);
 $light-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.19);
+$footer-bg-color: #f5f5f5;
 
 //Font Sizes
 $font-med: 1rem; //16px
