--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -889,4 +889,32 @@ button,
     font-size: 2rem;
   }
 }
+
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin-top: 2rem;
+  height: 1rem;
+  padding: 1rem 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #f5f5f5;
+}
+
+footer p {
+  font-family: "Poppins", sans-serif;
+}
+
+@media (min-width: 64em) {
+  footer {
+    margin-top: 5rem;
+    height: 1.5rem;
+  }
+}
 /*# sourceMappingURL=style.css.map */
