--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -240,6 +240,11 @@ button,
   }
 }
 
+.header {
+  -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.19);
+          box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.19);
+}
+
 .header__menu {
   margin-top: 1rem;
   background: #fff;
@@ -915,6 +920,167 @@ footer p {
   footer {
     margin-top: 5rem;
     height: 1.5rem;
+  }
+}
+
+.project {
+  font-family: "Poppins", sans-serif;
+}
+
+.project p {
+  margin: 2rem;
+  margin-top: 1.5rem;
+}
+
+.project p span {
+  color: #ff8800;
+}
+
+.project__description_header {
+  width: 90%;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 2rem;
+}
+
+.project__description_header h1 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  margin: 0;
+  margin-right: 0.5rem;
+}
+
+.project__description_header .underline {
+  width: 70%;
+  height: 2px;
+  border-radius: 50px;
+  background: #ff8800;
+}
+
+.project__cta {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.project__cta a {
+  -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.19);
+          box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.19);
+  background: #ff8800;
+  padding: 0.75rem 2rem;
+  color: #fff;
+  border-radius: 5px;
+}
+
+.project__cta a:hover {
+  opacity: 0.8;
+}
+
+.project__body {
+  padding: 1.5rem;
+}
+
+.project__body h1 {
+  margin: 0;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.project__body .underline {
+  width: 100%;
+  height: 3px;
+  border-radius: 50px;
+  background: #ff8800;
+}
+
+.project__img {
+  background: #ff8800;
+  padding: 1rem;
+  height: 30vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.project__img .img {
+  width: 90%;
+  margin: auto;
+  height: 90%;
+  background: url("../projects/cris photography/cris_photography_thumbnail.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  -webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.31);
+          box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.31);
+}
+
+@media (min-width: 64em) {
+  .project p {
+    width: 60%;
+    margin: auto;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+    padding: 1.5rem;
+  }
+  .project__description_header {
+    width: 90%;
+    margin: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: 2rem;
+  }
+  .project__description_header h1 {
+    font-weight: 400;
+    margin: 0;
+    margin-right: 1rem;
+    font-size: 2rem;
+  }
+  .project__description_header .underline {
+    width: 70%;
+    height: 3px;
+    border-radius: 1rem;
+    background: #ff8800;
+  }
+  .project__cta {
+    font-size: 1.5rem;
+  }
+  .project__body {
+    width: 90%;
+    margin: auto;
+  }
+  .project__body h1 {
+    font-size: 3rem;
+  }
+  .project__img {
+    height: 65vh;
   }
 }
 /*# sourceMappingURL=style.css.map */
